gccida/c1/unsafe_for_reeval
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unsafe_for_reeval/src/tree.c:2282:26: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
rtl_op = first_rtl_op( ( tree_code)( unsigned __int8)v2); 
                         ^~~~~~~~~
                         tree_cons
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unsafe_for_reeval/src/tree.c:1314:1: note: 'tree_cons' declared here
tree_cons (purpose, value, chain)
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unsafe_for_reeval/src/tree.c:2282:38: error: expected expression
rtl_op = first_rtl_op( ( tree_code)( unsigned __int8)v2); 
                                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unsafe_for_reeval/src/obj/tree.o] Error 1
